tests/regression/pr55/pb.expected
File "tests/regression/pr55/pb.smt2", line 6, character 8-12:
6 | (assert lh_2)
            ^^^^
Error Unbound identifier: `lh_2`
